libopmtransportdir = $(includedir)/opm/transport

lib_LTLIBRARIES    = libopmtransport.la
libopmtransport_la_LIBADD        = -lm

libopmtransport_HEADERS =                        \
spu_explicit.h					 \
spu_implicit.h					 \
grid.h

libopmtransport_la_SOURCES =                     \
spu_explicit.c					 \
spu_implicit.c
